--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -18,7 +18,8 @@
 
   <style>
     html {
-      background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=5);
+      /* background: #018DED url(http://unsplash.it/1500/1000?image=881&blur=5); */
+      background: linear-gradient(#bbb, #1C1C1C);
       background-size: cover;
       font-family: 'helvetica neue';
       text-align: center;
@@ -37,7 +38,7 @@
     .clock {
       width: 30rem;
       height: 30rem;
-      border: 20px solid white;
+      border: 20px solid aquamarine;
       border-radius: 50%;
       margin: 50px auto;
       position: relative;
@@ -51,6 +52,7 @@
 
     .clock-face {
       position: relative;
+      border-radius: 100%;
       width: 100%;
       height: 100%;
       transform: translateY(-3px); /* account for the height of the clock hands */
@@ -62,12 +64,38 @@
       background: black;
       position: absolute;
       top: 50%;
+      border-radius: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.03, 2.13, 0.58, 1);
     }
 
   </style>
 
   <script>
 
+    const secondHand = document.querySelector('.second-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+
+    function setDate() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;        
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      console.log(seconds);
+      
+      const minutes = now.getMinutes();
+      const minutesDegrees = ((minutes / 60) * 360) + 90;      
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+
+      const hours = now.getHours();
+      const hoursDegrees = ((hours / 12) * 360) + 90;      
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+    }
+    
+    setInterval(setDate, 1000);
 
   </script>
 </body>
