--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -1,19 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>HTML5 Canvas</title>
-</head>
-<body>
-<canvas id="draw" width="800" height="800"></canvas>
-<script>
-</script>
+    <head>
+        <meta charset="UTF-8" />
+        <title>HTML5 Canvas</title>
+    </head>
+    <body>
+        <canvas id="draw" width="800" height="800"></canvas>
+        <script>
+            const canvas = document.querySelector("#draw");
+            const ctx = canvas.getContext("2d");
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            ctx.strokeStyle = "#DEDA55";
+            ctx.lineJoin = "round";
+            ctx.lineCap = "round";
+            ctx.lineWidth = 100;
 
-<style>
-  html, body {
-    margin: 0;
-  }
-</style>
+            let isDrawing = false;
+            let lastX = 0;
+            let lastY = 0;
+            let hue = 240;
+            let direction = true;
 
-</body>
+            function draw(e) {
+                if (!isDrawing) return; //STOPS FUNCTION FROM RUNNING IF NOT MOUSE DOWN
+                console.log(e);
+                ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+
+                ctx.beginPath();
+                // START FROM
+                ctx.moveTo(lastX, lastY);
+                // MOVE TO
+                ctx.lineTo(e.offsetX, e.offsetY);
+                ctx.stroke();
+                [lastX, lastY] = [e.offsetX, e.offsetY];
+                hue++;
+                if (hue >= 360) {
+                    hue = 260;
+                }
+
+                if (ctx.lineWidth >= 200 || ctx.lineWidth <= 40) {
+                    direction = !direction;
+                }
+                if (direction) {
+                    ctx.lineWidth++;
+                } else {
+                    ctx.lineWidth--;
+                }
+            }
+
+            canvas.addEventListener("mousedown", e => {
+                isDrawing = true;
+                [lastX, lastY] = [e.offsetX, e.offsetY];
+            });
+
+            canvas.addEventListener("mousemove", draw);
+            canvas.addEventListener("mouseup", () => (isDrawing = false));
+            canvas.addEventListener("mouseout", () => (isDrawing = false));
+        </script>
+
+        <style>
+            html,
+            body {
+                margin: 0;
+            }
+        </style>
+    </body>
 </html>
